k8s/overlays/prod/limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
spec:
  template:
    spec:
      containers:
        - name: banking-api
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: "1"
